haskell-devscripts (0.6.19) UNRELEASED; urgency=low

  [ Kari Pahula ]
  * Install Haddock files to /usr/lib/ghc-$VER/haddock/$PKG-$VER
  * Use --builddir Cabal option instead of shuffling dist/ dirs around
  * Remove postinst/prerm scripts
  * Put package.conf into package.conf.d

  [ Joachim Breitner ]
  * Remove dh_haskell_prep, not needed any more

 -- Joachim Breitner <nomeata@debian.org>  Wed, 13 Jan 2010 14:28:53 +0100

haskell-devscripts (0.6.18) unstable; urgency=low

  * dh_haskell_prep: Allow spaces before : in cabal fields.

 -- Marco Túlio Gontijo e Silva <marcot@riseup.net>  Mon, 09 Nov 2009 14:44:32 -0200

haskell-devscripts (0.6.17) unstable; urgency=low

  * hlibrary.mk: Allow spaces before : in cabal fields.
  * Remove unsuported packaging scripts, leaving only the standard
    hlibrary.mk.  Closes: #520703, #543776.

 -- Marco Túlio Gontijo e Silva <marcot@riseup.net>  Sun, 08 Nov 2009 16:55:31 -0200

haskell-devscripts (0.6.16) unstable; urgency=low

  [ Marco Túlio Gontijo e Silva ]
  * Change Marco Túlio's e-mail.
  * dh_haskell_depends: Create empty haskell: variables.
  * dh_haskell_shlibdeps: Change license.
  * debian/control: Use Debian Haskell Group as Maintainer.
  * debian/control: Update Vcs-Darcs to Debian Haskell Group darcs.
  * debian/control: Use new Standards-Version.
  * debian/control: Use DM-Upload-Allowed.
  * debian/control: Use one line per package in Depends.

  [ Joachim Breitner ]
  * Refer to GPL-2 in John’s copyright statement, with his permission

 -- Joachim Breitner <nomeata@debian.org>  Sun, 04 Oct 2009 10:43:54 +0200

haskell-devscripts (0.6.15+nmu13) unstable; urgency=low

  * NMU.
  * hlibrary.mk: install .haddock files in -dev package, not -doc.
  * hlibrary.mk: Build documentation in build-haddock-stamp target. Add it
    as a prerequisite for build/*-dev target.
  * hlibrary.mk: copy relevant data from Cabal database from -dev to -doc
    package, for ghc6-doc's trigger.
