@@ -1,2 +1,3 @@
+dh_haskell_provides.1
 dh_haskell_depends.1
 dh_haskell_shlibdeps.1
