@@ -29,6 +29,7 @@ not yet support nhc98.
 
 =head1 SEE ALSO
 
+L<dh_haskell_provides(1)>
 L<dh_haskell_shlibdeps(1)>
 L<debhelper(7)>
 
