@@ -8,6 +8,9 @@ haskell-devscripts (0.6.19) UNRELEASED; urgency=low
 
   [ Joachim Breitner ]
   * Remove dh_haskell_prep, not needed any more
+  * Create dh_haskell_provides, to create a ${haskell:Provides} substvar
+    containing a string derived from the cabal package name, version and ABI
+    hash.
 
  -- Joachim Breitner <nomeata@debian.org>  Wed, 13 Jan 2010 14:28:53 +0100
 
